renaming darkilouche to gilouche

--- a/theme.html
+++ b/theme.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="darkilouche.css" />
+    <link rel="stylesheet" type="text/css" href="gilouche.css" />
     <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="darkilouche.js"></script>
+    <script type="text/javascript" src="gilouche.js"></script>
   </head>
   <body>
     <div class="messages">
