--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #4b5bcf;
+  		background-color: #fff;
 		  font-family: "helvetica"; 
-  		color: #ffffff;
+  		color: #333;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #b4a430; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; color: #999; margin-bottom: 3px; }
 		h1 .small { font-size: 0.4em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #b4a430; }
-    h3 { text-align: center; color: #b4a430; }
-    a { color: #b4a430; }
+		h2 { font-size: 1.5em; color: #999; }
+    h3 { text-align: center; color: #99f; }
+    a { color: #99f; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
