--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       A light theme for the Gwibber twitter/laconi.ca client
     </div>
 
+<h2>Screenshot</h2>
+<img src="gwibber-gilouche.png">
+
     <h2>Dependencies</h2>
 <p>Gwibber, of course!</p>
 <h2>Install</h2>
