removing email address

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </p>
 
       <h2>Contact</h2>
-      <p>Garrett LeSage (garrettl@gmail.com)</p>
+      <p>Garrett LeSage</p>
 
       <h2>Download</h2>
       <p>You can download this project in either <a href="http://github.com/garrett/gwibber-gilouche/zipball/master">zip</a> or <a href="http://github.com/garrett/gwibber-gilouche/tarball/master">tar</a> formats.</p>
