updating the web page a little

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       <h1><a href="http://github.com/garrett/gwibber-gilouche">gwibber-gilouche</a> <span class="small">by <a href="http://github.com/garrett">garrett</a></span></h1>
 
       <div class="description">
-        A light theme for the Gwibber twitter/laconi.ca client
+        A light theme for the Gwibber twitter/laconi.ca client, based on Jakub's theme
+        <a href="http://garrett.github.com/jimmac/gwibber-darkilouche/">Darkilouche</a>
       </div>
 
       <h2>Screenshot</h2>
