while I can't really get the header to show anything even with gwibber trunk, added the stuff on request.

--- a/theme.html
+++ b/theme.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="darkilouche.js"></script>
   </head>
   <body>
+    <div class="header"></div>
     <div class="messages">
     </div>
   </body>
